--- a/FocusPoint.DAL/FocusPoint.DAL.csproj
+++ b/FocusPoint.DAL/FocusPoint.DAL.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.1" />
+  </ItemGroup>
+
 </Project>
