feat: Added DbContext, updated gitignore, removed unused files, added libraries

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-appsettings.json
+appsettings.*
 
 # Created by https://www.toptal.com/developers/gitignore/api/aspnetcore
 # Edit at https://www.toptal.com/developers/gitignore?templates=aspnetcore
